[package]
name = "chartfun"
version = "0.1.0"
edition = "2021"

[dependencies]
processdumper = { git = "https://github.com/robmikh/dwmdumper", rev = "356aa96726f877b822ffd26a5601c644c53eadbc" }
#processdumper = { path = "../dwmdumper/processdumper" }

[dependencies.windows]
version = "0.54"
features = [
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_DirectX",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]

[features]
dxdebug = []
